Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100386

Crash in GLTFImporter::commonMaterial

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.3, 6.6.0 Beta3, 6.7.0 FF
    • 6.2.2
    • Qt3D
    • None
    • Linux/X11
    • 670144a66 (dev), 2a2feea64 (6.6), 23b9f4012 (6.5)

    Description

      In plugins/sceneparsers/gltf/gltfimporter.cpp -> GLTFImporter::commonMaterial:

      If no common material can be found, Q_UNLIKELY but happens, renameFromJson runs with the nullptr and tries to give it an objectName resulting in a seg fault.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            spez Ku Tee
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes