GLTFImporter: fix crash when no material matches

Don't call renameFromJson(jsonObj, mat) with a nullptr mat.

Fixes: QTBUG-100386
Change-Id: Ib35cd34212db6a309f629eabc93c19a69957eaf7
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit 670144a660823238ca286d5b631c9e1ae7dd8f00)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>